more text and edits

--- a/src/bib.bib
+++ b/src/bib.bib
@@ -8063,3 +8063,16 @@ year={2018},
 OPTpages={3610-3624},
 }
 
+
+@article{WetAl2015JAMES,
+author = {Wan, Hui and Rasch, Philip J. and Taylor, Mark A. and Jablonowski, Christiane},
+title = {Short-term time step convergence in a climate model},
+journal = james,
+volume = {7},
+number = {1},
+pages = {215-225},
+doi = {10.1002/2014MS000368},
+url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1002/2014MS000368},
+eprint = {https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1002/2014MS000368}
+}
+
